--- a/wallet/res/values-cs/strings.xml
+++ b/wallet/res/values-cs/strings.xml
@@ -37,9 +37,9 @@
   <string name="wallet_options_encrypt_keys_change">Změnit PIN pro utrácení.</string>
   <string name="wallet_options_safety">Bezpečnost</string>
   <string name="wallet_options_donate">Přispěj</string>
-  <string name="wallet_donate_address_label">Dar pro Digitalcoin Wallet</string>
+  <string name="wallet_donate_address_label">Dar pro MaxCoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Na vnitřním úložišti není dostatek místa!</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet používá vnitřní úložiště pro ukládání transakcí a bloků. Pokud dojde místo v ůložišti, přestane fungovat a vaše Digitalcoiny jsou vystaveny riziku ztráty!\n\nChcete otevřít Správu Aplikací a odinstalovat nepotřebné aplikace?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet používá vnitřní úložiště pro ukládání transakcí a bloků. Pokud dojde místo v ůložišti, přestane fungovat a vaše Digitalcoiny jsou vystaveny riziku ztráty!\n\nChcete otevřít Správu Aplikací a odinstalovat nepotřebné aplikace?</string>
   <string name="wallet_low_storage_dialog_button_apps">Spravovat aplikace</string>
   <string name="wallet_timeskew_dialog_title">Zkontrolujte vaše nastavení času!</string>
   <string name="wallet_timeskew_dialog_msg">Čas vašeho přístroje vypnut %d minut. Asi nelze odesílat nebo přijímat Digitalcoiny v důsledku tohoto problému.\n\nMěli byste zkontrolovat a opravit váš čas a nastavení časového pásma.</string>
@@ -49,7 +49,7 @@
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Stáhnout</string>
   <string name="wallet_old_sdk_dialog_title">Android verze je příliš stará</string>
-  <string name="wallet_old_sdk_dialog_message">Je pravděpodobné, že jedna z následujících verzí Digitalcoin Wallet nebude podporovat vaše zařízení. V některých případech může být v takové situaci komplikované utratit Digitalcoiny na tomto zařízení.\n\nPokud si nejste jistí co děláte, tak se vám doporučuje tyto Digitalcoiny přemístit brzy do jiného zařízení.</string>
+  <string name="wallet_old_sdk_dialog_message">Je pravděpodobné, že jedna z následujících verzí MaxCoin Wallet nebude podporovat vaše zařízení. V některých případech může být v takové situaci komplikované utratit Digitalcoiny na tomto zařízení.\n\nPokud si nejste jistí co děláte, tak se vám doporučuje tyto Digitalcoiny přemístit brzy do jiného zařízení.</string>
   <string name="send_coins_activity_title">Zaslat Digitalcoiny</string>
   <string name="send_coins_fragment_request_payment_request_progress">Stahuji podpis z %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Stahováni podpisu selhalo</string>
@@ -174,7 +174,7 @@
   <string name="export_keys_dialog_success"><![CDATA[<p>Vaše peněženka byla zazálohována do <tt>%s</tt></p><p>Pokud vaše zařízení má vyměnitelnou SD kartu, tak záloha <i>by měla </i> být na této kartě. Vyndejte ji a uschovejte ji na bezpečném místě. Pokud karta <i>není</i> vyměnitelná, bude potřeba aby jste přesunuly zálohu na jiné zařízení.</p><p><b>Pokud je záloha pouze na vašem zařízení tak se vystavujete riziku že ztratíte oboje zároveň!</b></p><p>Každopádně se ujistěte, že si zapamatujete heslo. Přejete si zazálohovat peněženku nyní?</p>]]></string>
   <string name="export_keys_dialog_failure">Vaše peněženka nebyla zazálohována:\n%s</string>
   <string name="export_keys_dialog_button_archive">Archivovat</string>
-  <string name="export_keys_dialog_mail_subject">Digitalcoin Wallet záloha</string>
+  <string name="export_keys_dialog_mail_subject">MaxCoin Wallet záloha</string>
   <string name="export_keys_dialog_mail_text">Připojený zašifrovaný soubor obsahuje Digitalcoin privátní klíče a měl by být vždy na bezpečném místě. Nezapomeňte šifrovací heslo!</string>
   <string name="export_keys_dialog_mail_intent_chooser">Archivovat peněženku pomocí…</string>
   <string name="export_keys_dialog_mail_intent_failed">Archivace peněženky selhala.</string>
