--- a/wallet/res/values-da/strings.xml
+++ b/wallet/res/values-da/strings.xml
@@ -37,9 +37,9 @@
   <string name="wallet_options_encrypt_keys_change">Ændr spenderings-PIN</string>
   <string name="wallet_options_safety">Sikkerhedsnoter</string>
   <string name="wallet_options_donate">Giv drikkepenge / donér</string>
-  <string name="wallet_donate_address_label">Donér til Digitalcoin Wallet</string>
+  <string name="wallet_donate_address_label">Donér til MaxCoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Enheds interne lagerplads er lav!</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet bruger intern lager til at huske transaktioner of blokke. Hvis den løber tør for plads, vil den stoppe med at virke og dine Digitalcoins vil risikeres!\n\nVil du åbne app-håndteringen for at afinstallere ubrugte apps?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet bruger intern lager til at huske transaktioner of blokke. Hvis den løber tør for plads, vil den stoppe med at virke og dine Digitalcoins vil risikeres!\n\nVil du åbne app-håndteringen for at afinstallere ubrugte apps?</string>
   <string name="wallet_low_storage_dialog_button_apps">Håndtér apps</string>
   <string name="wallet_timeskew_dialog_title">Tjek dine tidsindstillinger!</string>
   <string name="wallet_timeskew_dialog_msg">Din enheds tid fraviger med %d minutter. Du kan sandsynligvis ikke sende eller modtage digitalcoins på grund af dette problem.\n\nDu bør tjekke og rette dine tids- og tidzoneindstillinger.</string>
@@ -49,7 +49,7 @@
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Download</string>
   <string name="wallet_old_sdk_dialog_title">Android-version er uddateret</string>
-  <string name="wallet_old_sdk_dialog_message">Der er risiko for, at en af de næste udgivelser af Digitalcoin Wallet ikke vil understøtte din enhed længere. I nogle tilfælde kan det være svært at bruge mønter på denne enhed.\n\nMed mindre du ved hvad du gør, anbefales det snart at flytte dine mønter væk.</string>
+  <string name="wallet_old_sdk_dialog_message">Der er risiko for, at en af de næste udgivelser af MaxCoin Wallet ikke vil understøtte din enhed længere. I nogle tilfælde kan det være svært at bruge mønter på denne enhed.\n\nMed mindre du ved hvad du gør, anbefales det snart at flytte dine mønter væk.</string>
   <string name="send_coins_activity_title">Send Digitalcoins</string>
   <string name="send_coins_fragment_request_payment_request_progress">Henter signatur fra %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Hentning af signatur mislykkedes</string>
