--- a/wallet/res/values-de/strings.xml
+++ b/wallet/res/values-de/strings.xml
@@ -45,7 +45,7 @@
 	<string name="wallet_options_donate">Spenden</string>
 	<string name="wallet_donate_address_label">Spende für digitalcoin Wallet</string>
 	<string name="wallet_low_storage_dialog_title">Interner Speicher wird knapp!</string>
-	<string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet nutzt internen Speicher um sich Transaktionen und Blöcke zu merken. Wenn der
+	<string name="wallet_low_storage_dialog_msg">MaxCoin Wallet nutzt internen Speicher um sich Transaktionen und Blöcke zu merken. Wenn der
 		Speicher vollläuft, wird es nicht mehr funktionieren und deine Digitalcoins sind in Gefahr!\n\nMöchtest Du die
 		App-Verwaltung öffnen, um ungenutzte Apps zu deinstallieren?</string>
 	<string name="wallet_low_storage_dialog_button_apps">App-Verwaltung</string>
