--- a/wallet/res/values-es/strings.xml
+++ b/wallet/res/values-es/strings.xml
@@ -37,9 +37,9 @@
   <string name="wallet_options_encrypt_keys_change">Cambiar PIN para pagos</string>
   <string name="wallet_options_safety">Notas sobre seguridad</string>
   <string name="wallet_options_donate">Sugerencias / donar</string>
-  <string name="wallet_donate_address_label">Donación para Digitalcoin Wallet</string>
+  <string name="wallet_donate_address_label">Donación para MaxCoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Espacio de almacenamiento interno de dispositivo bajo!</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet usa la memoria interna para recordar transacciones y bloques. Si te quedas sin espacio, dejará de funcionar y tus Digitalcoins estarán en riesgo.\n\n¿Quieres abrir el administrador de aplicaciones para desinstalar apps innecesarias?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet usa la memoria interna para recordar transacciones y bloques. Si te quedas sin espacio, dejará de funcionar y tus Digitalcoins estarán en riesgo.\n\n¿Quieres abrir el administrador de aplicaciones para desinstalar apps innecesarias?</string>
   <string name="wallet_low_storage_dialog_button_apps">Gestionar aplicaciones</string>
   <string name="wallet_timeskew_dialog_title">¡Compruebe la hora del sistema! </string>
   <string name="wallet_timeskew_dialog_msg">La hora de tu dispositivo es errónea por %d minutos. Probablemente no puedes enviar ni recibir Digitalcoins debido a este problema.\n\nDebes revisar y corregir tu hora y ajustes de huso horario.</string>
@@ -49,7 +49,7 @@
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Descargar</string>
   <string name="wallet_old_sdk_dialog_title">Versión de Android desactualizada</string>
-  <string name="wallet_old_sdk_dialog_message">Es posible que una de las próximas versiones de Digitalcoin Wallet no soporte tu dispositivo. En algunos casos, puede ser difícil hacer pagos con este dispositivo.\n\nA menos que sepas lo que estás haciendo, se recomienda que saques tus Digitalcoins lo más pronto posible.</string>
+  <string name="wallet_old_sdk_dialog_message">Es posible que una de las próximas versiones de MaxCoin Wallet no soporte tu dispositivo. En algunos casos, puede ser difícil hacer pagos con este dispositivo.\n\nA menos que sepas lo que estás haciendo, se recomienda que saques tus Digitalcoins lo más pronto posible.</string>
   <string name="send_coins_activity_title">Enviar Digitalcoins</string>
   <string name="send_coins_fragment_request_payment_request_progress">Adquiriendo firma de %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Ha fallado la adquisición de firma</string>
@@ -174,7 +174,7 @@
   <string name="export_keys_dialog_success"><![CDATA[<p>Su cartera ha sido copiada en <tt>%s</tt></p><p>Si su dispositivo tiene una tarjeta SD, la copia <i>debería</i> estar ahí. Extráigala y manténgala en un sitio seguro. Si la tarjeta <i>no</i> es extraíble, necesita guardar la copia en otro lugar distinto a su dispositivo.</p><p><b>Si el único sitio en el que existe una copia es en su dispositivo, ¡corre el riesgo de perder las dos al mismo tiempo!</b></p><p>En cualquier caso, asegúrese de recordar la contraseña de la copia. ¿Desea guardar su cartera ahora?</p>]]></string>
   <string name="export_keys_dialog_failure">No se pudo realizar la copia de seguridad de su cartera:\n%s</string>
   <string name="export_keys_dialog_button_archive">Archivo</string>
-  <string name="export_keys_dialog_mail_subject">Copia de seguridad de Digitalcoin Wallet</string>
+  <string name="export_keys_dialog_mail_subject">Copia de seguridad de MaxCoin Wallet</string>
   <string name="export_keys_dialog_mail_text">El archivo encriptado adjunto contiene claves privadas Digitalcoin y ha de mantenerse seguro en todo momento. ¡Nunca olvides la contraseña de encriptado!</string>
   <string name="export_keys_dialog_mail_intent_chooser">Archivar cartera usando…</string>
   <string name="export_keys_dialog_mail_intent_failed">Archivo de cartera fallido.</string>
