--- a/wallet/res/values-fi/strings.xml
+++ b/wallet/res/values-fi/strings.xml
@@ -37,9 +37,9 @@
   <string name="wallet_options_encrypt_keys_change">Vaihda maksu-PIN</string>
   <string name="wallet_options_safety">Turvallisuustiedot</string>
   <string name="wallet_options_donate">Anna tippi tai lahjoita</string>
-  <string name="wallet_donate_address_label">Lahjoitus Digitalcoin Walletille</string>
+  <string name="wallet_donate_address_label">Lahjoitus MaxCoin Walletille</string>
   <string name="wallet_low_storage_dialog_title">Sisäinen tallennustila on vähissä!</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet käyttää sisäistä tallennustilaa muistaakseen varainsiirrot ja lohkot. Jos se ei saa tarpeeksi tallennustilaa, se lakkaa toimimasta ja Digitalcoinisi ovat silloin vaarassa!\n\nHaluatko avata ohjelmien hallinan poistaaksesi tarpeettomia ohjelmia?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet käyttää sisäistä tallennustilaa muistaakseen varainsiirrot ja lohkot. Jos se ei saa tarpeeksi tallennustilaa, se lakkaa toimimasta ja Digitalcoinisi ovat silloin vaarassa!\n\nHaluatko avata ohjelmien hallinan poistaaksesi tarpeettomia ohjelmia?</string>
   <string name="wallet_low_storage_dialog_button_apps">Hallitse ohjelmia</string>
   <string name="wallet_timeskew_dialog_title">Tarkista järjestelmän kellonaika ja päivämäärä!</string>
   <string name="wallet_timeskew_dialog_msg">Laitteesi kello heittää %d minuuttia. Et välttämättä voi lähettää tai vastaanottaa Digitalcoineja tämän ongelman johdosta.\n\nSinun tulisi tarkistaa ja päivittää aikasi sekä aikavyöhykeasetuksesi.</string>
@@ -49,7 +49,7 @@
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Lataa</string>
   <string name="wallet_old_sdk_dialog_title">Android-versio ei ole ajan tasalla</string>
-  <string name="wallet_old_sdk_dialog_message">On mahdollisuus että Digitalcoin Walletin seuraava versio ei enää tue laitettasi. Joissakin tapauksissa kolikoiden käyttäö voi hankaloitua tässä laitteessa.\n\nMikäli et tiedä mitä teet, on suositeltavaa siirtää kolikkosi muualle pian.</string>
+  <string name="wallet_old_sdk_dialog_message">On mahdollisuus että MaxCoin Walletin seuraava versio ei enää tue laitettasi. Joissakin tapauksissa kolikoiden käyttäö voi hankaloitua tässä laitteessa.\n\nMikäli et tiedä mitä teet, on suositeltavaa siirtää kolikkosi muualle pian.</string>
   <string name="send_coins_activity_title">Lähetä Digitalcoineja</string>
   <string name="send_coins_fragment_request_payment_request_progress">Saadaan allekirjoitus osoitteesta %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Allekirjoituksen saanti epäonnistui</string>
