--- a/wallet/res/values-fr/strings.xml
+++ b/wallet/res/values-fr/strings.xml
@@ -39,7 +39,7 @@
   <string name="wallet_options_donate">Faire un don</string>
   <string name="wallet_donate_address_label">Don pour digitalcoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Espace de stockage interne faible !</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet utilise le stockage interne pour se rappeler des transactions et des blocs. S\'il manque d\'espace, il cessera de fonctionner et vos digitalcoins seront à risque !\n\nVoulez-vous ouvrir le gestionnaire d\'applications pour désinstaller des applications inutiles ?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet utilise le stockage interne pour se rappeler des transactions et des blocs. S\'il manque d\'espace, il cessera de fonctionner et vos digitalcoins seront à risque !\n\nVoulez-vous ouvrir le gestionnaire d\'applications pour désinstaller des applications inutiles ?</string>
   <string name="wallet_low_storage_dialog_button_apps">Gérer les applis</string>
   <string name="wallet_timeskew_dialog_title">Vérifiez les réglages de votre horloge !</string>
   <string name="wallet_timeskew_dialog_msg">L\'horloge de votre appareil est déréglée de %d minutes. Vous ne pouvez probablement pas envoyer ou recevoir de digitalcoins à cause de ce problème.\n\nVous devriez vérifier et corriger votre horloge et vos paramètres de fuseau horaire.</string>
@@ -49,7 +49,7 @@
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Télécharger</string>
   <string name="wallet_old_sdk_dialog_title">La version d\'Android est obsolète</string>
-  <string name="wallet_old_sdk_dialog_message">Il est probable qu\'une prochaine version de Digitalcoin Wallet ne prenne plus en charge votre appareil. Dans certains cas, il peut être difficile de dépenser des digitalcoins avec cet appareil.\n\nÀ moins que vous ne sachiez ce que vous faites, il est recommandé de bientôt déplacer vos digitalcoins.</string>
+  <string name="wallet_old_sdk_dialog_message">Il est probable qu\'une prochaine version de MaxCoin Wallet ne prenne plus en charge votre appareil. Dans certains cas, il peut être difficile de dépenser des digitalcoins avec cet appareil.\n\nÀ moins que vous ne sachiez ce que vous faites, il est recommandé de bientôt déplacer vos digitalcoins.</string>
   <string name="send_coins_activity_title">Envoyer des digitalcoins</string>
   <string name="send_coins_fragment_request_payment_request_progress">Récupération de la signature de %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Échec lors de la récupération de la signature</string>
@@ -269,8 +269,8 @@
   <string name="button_paste">Coller</string>
   <string name="button_share">Partager</string>
   <string name="button_set_as_default">Définir par défaut</string>
-  <string name="button_request_coins">Demande de DGC</string>
-  <string name="button_send_coins">Envoi de DGC</string>
+  <string name="button_request_coins">Demande de MAX</string>
+  <string name="button_send_coins">Envoi de MAX</string>
   <string name="button_scan">Numériser</string>
   <string name="button_edit_address">Ajouter/modifier une adresse</string>
   <string name="button_settings">Paramètres</string>
