--- a/wallet/res/values-it/strings.xml
+++ b/wallet/res/values-it/strings.xml
@@ -37,9 +37,9 @@
   <string name="wallet_options_encrypt_keys_change">Cambia il PIN di spesa.</string>
   <string name="wallet_options_safety">Note di sicurezza</string>
   <string name="wallet_options_donate">Mancia / donazione</string>
-  <string name="wallet_donate_address_label">Donazione per Digitalcoin Wallet</string>
+  <string name="wallet_donate_address_label">Donazione per MaxCoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Lo spazio interno del dispositivo è basso!</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet usa lo spazio interno per ricordarsi le transizioni e i blocchi. Se non hai più spazio, l\'applicazione smetterà di funzionare e i tuoi Digitalcoin saranno a rischio!\n\nVuoi aprire il gestore delle applicazioni per disinstallare le applicazioni inutili/non necessarie?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet usa lo spazio interno per ricordarsi le transizioni e i blocchi. Se non hai più spazio, l\'applicazione smetterà di funzionare e i tuoi Digitalcoin saranno a rischio!\n\nVuoi aprire il gestore delle applicazioni per disinstallare le applicazioni inutili/non necessarie?</string>
   <string name="wallet_low_storage_dialog_button_apps">Gestisci applicazioni</string>
   <string name="wallet_timeskew_dialog_title">Controlla data e ora!</string>
   <string name="wallet_timeskew_dialog_msg">Il tuo dispositivo è spento da %d minuti. Probabilmente non puoi inviare ne ricevere Digitalcoins per via di questo problema.\n\nDevi controllare e correggere l\'ora e il fuso orario del tuo dispositivo.</string>
@@ -49,7 +49,7 @@
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Scarica</string>
   <string name="wallet_old_sdk_dialog_title">La versione Android non è aggiornata</string>
-  <string name="wallet_old_sdk_dialog_message">Potrebbe essere che le prossime versioni di Digitalcoin Wallet non supporterà più il tuo dispositivo. In questi casi, potrebbe essere difficile spendere i Digitalcoin su questo dispositivo.\n\nA meno che tu non sappia quello che stai facendo, ti raccomandiamo di spostare il tuo denaro al più presto.</string>
+  <string name="wallet_old_sdk_dialog_message">Potrebbe essere che le prossime versioni di MaxCoin Wallet non supporterà più il tuo dispositivo. In questi casi, potrebbe essere difficile spendere i Digitalcoin su questo dispositivo.\n\nA meno che tu non sappia quello che stai facendo, ti raccomandiamo di spostare il tuo denaro al più presto.</string>
   <string name="send_coins_activity_title">Invia Digitalcoins</string>
   <string name="send_coins_fragment_request_payment_request_progress">Acquisizione firma da %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Acquisizione firma fallita</string>
