--- a/wallet/res/values-nb/strings.xml
+++ b/wallet/res/values-nb/strings.xml
@@ -37,9 +37,9 @@
   <string name="wallet_options_encrypt_keys_change">Endre PIN for betaling</string>
   <string name="wallet_options_safety">Sikkerhetsnotater</string>
   <string name="wallet_options_donate">Tips / Doner</string>
-  <string name="wallet_donate_address_label">Doner til Digitalcoin Wallet</string>
+  <string name="wallet_donate_address_label">Doner til MaxCoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Enhetens interne lagringsplass er lav!</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet bruker lagring internt for å huske transaksjoner og blokker. Hvis den løper tom for plass, vil den stoppe å virke og dine digitalcoins vil være under risiko!\n\nVil du åpne app-håndteringen for å avinstallere ubrukte apps?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet bruker lagring internt for å huske transaksjoner og blokker. Hvis den løper tom for plass, vil den stoppe å virke og dine digitalcoins vil være under risiko!\n\nVil du åpne app-håndteringen for å avinstallere ubrukte apps?</string>
   <string name="wallet_low_storage_dialog_button_apps">Håndter apps</string>
   <string name="wallet_timeskew_dialog_title">Sjekk dine tidsinnstillinger!</string>
   <string name="wallet_timeskew_dialog_msg">Din enhets tid fraviker med %d minutter. Du kan sannsynligvis ikke sende eller motta digitalcoins på grunn av dette problemet.\n\nDu bør sjekke og rette dine tids- og tidssoneinnstillinger.</string>
@@ -49,7 +49,7 @@
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Last ned</string>
   <string name="wallet_old_sdk_dialog_title">Android-versjon er utdatert</string>
-  <string name="wallet_old_sdk_dialog_message">Der er risiko for at en av de neste utgivelsene av Digitalcoin Wallet ikke vil støtte din enhet lenger. I noen tilfeller kan det være vanskelig å bruke mynter på denne enheten.\n\nMed mindre du vet hva du gjør, anbefales det å straks flytte dine mynter vekk.</string>
+  <string name="wallet_old_sdk_dialog_message">Der er risiko for at en av de neste utgivelsene av MaxCoin Wallet ikke vil støtte din enhet lenger. I noen tilfeller kan det være vanskelig å bruke mynter på denne enheten.\n\nMed mindre du vet hva du gjør, anbefales det å straks flytte dine mynter vekk.</string>
   <string name="send_coins_activity_title">Send digitalcoins</string>
   <string name="send_coins_fragment_request_payment_request_progress">Henter signatur fra %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Henting av signatur mislyktes</string>
