--- a/wallet/res/values-pt-rBR/strings.xml
+++ b/wallet/res/values-pt-rBR/strings.xml
@@ -39,7 +39,7 @@
   <string name="wallet_options_donate">Dica / doar</string>
   <string name="wallet_donate_address_label">Doação pra Digitalcoin carteira</string>
   <string name="wallet_low_storage_dialog_title">dispositivo nternal espaço de armazenamento baixa</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet usa o armazenamento interno para armazenar transações e blocos. Se seu dispositivo ficar sem espaço, ele vai parar de trabalhar e seus Digitalcoins estarão em risco!\n\nDeseja abrir o Gerenciador de Aplicativos para desinstalar aplicativos desnecessários?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet usa o armazenamento interno para armazenar transações e blocos. Se seu dispositivo ficar sem espaço, ele vai parar de trabalhar e seus Digitalcoins estarão em risco!\n\nDeseja abrir o Gerenciador de Aplicativos para desinstalar aplicativos desnecessários?</string>
   <string name="wallet_low_storage_dialog_button_apps">Gerenciar aplicativos</string>
   <string name="wallet_timeskew_dialog_title">Verifique as configurações de hora!</string>
   <string name="wallet_timeskew_dialog_msg">A hora do seu dispositivo está incorreta por %d minutos. Você pode não conseguir enviar ou receber Digitalcoins devido a esse problemas\n\nVerifique e corrija a hora em configurações de fuso horário.</string>
@@ -49,7 +49,7 @@
   <string name="wallet_version_dialog_button_market">Google Tocar</string>
   <string name="wallet_version_dialog_button_binary">Baixar</string>
   <string name="wallet_old_sdk_dialog_title">Versão do Android desatualizada</string>
-  <string name="wallet_old_sdk_dialog_message">É possível que as próximas atualizações do Digitalcoin Wallet não sejam compatíveis com seu dispositivo. Neste caso, poderá ser difícil gastar Digitalcoins neste dispositivo.\n\nA menos que você saiba exatamente o que está fazendo, recomendamos a transferência para outra conta o mais rápido possível.</string>
+  <string name="wallet_old_sdk_dialog_message">É possível que as próximas atualizações do MaxCoin Wallet não sejam compatíveis com seu dispositivo. Neste caso, poderá ser difícil gastar Digitalcoins neste dispositivo.\n\nA menos que você saiba exatamente o que está fazendo, recomendamos a transferência para outra conta o mais rápido possível.</string>
   <string name="send_coins_activity_title">Enviar Digitalcoins</string>
   <string name="send_coins_fragment_request_payment_request_progress">Carregando assinatura de %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Erro ao carregar assinatura</string>
