--- a/wallet/res/values-ru/strings.xml
+++ b/wallet/res/values-ru/strings.xml
@@ -37,9 +37,9 @@
   <string name="wallet_options_encrypt_keys_change">Изменить ПИН</string>
   <string name="wallet_options_safety">Заметки по безопасности</string>
   <string name="wallet_options_donate">Пожертвовать</string>
-  <string name="wallet_donate_address_label">Пожертвование для Digitalcoin Wallet</string>
+  <string name="wallet_donate_address_label">Пожертвование для MaxCoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Мало места во внутреннем хранилище!</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet использует внутреннее хранилище для транзакций и блогов. Если оно переполнится, кошелек перестанет работать и вы рискуете потерять монеты!\n\nХотите открыть Application Manager и деинсталлировать ненужные приложения?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet использует внутреннее хранилище для транзакций и блогов. Если оно переполнится, кошелек перестанет работать и вы рискуете потерять монеты!\n\nХотите открыть Application Manager и деинсталлировать ненужные приложения?</string>
   <string name="wallet_low_storage_dialog_button_apps">Управлять приложениями</string>
   <string name="wallet_timeskew_dialog_title">Проверьте настройки времени!</string>
   <string name="wallet_timeskew_dialog_msg">Время вашего устройства сбито на %d минут. Возможно, из-за этого вы не можете отправить или получить монеты.\n\nВам нужно проверить и исправить установки времени и временной зоны.</string>
@@ -49,7 +49,7 @@
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Скачать</string>
   <string name="wallet_old_sdk_dialog_title">Версия для Android устарела</string>
-  <string name="wallet_old_sdk_dialog_message">Ваше устройство скорее всего не будет поддерживаться следующей версией Digitalcoin Wallet. В некоторых случаях, это может затруднить отправку с него монет.\n\nРекомендуется перенести монеты на другое устройство, если вы не уверены что можете с этим справиться.</string>
+  <string name="wallet_old_sdk_dialog_message">Ваше устройство скорее всего не будет поддерживаться следующей версией MaxCoin Wallet. В некоторых случаях, это может затруднить отправку с него монет.\n\nРекомендуется перенести монеты на другое устройство, если вы не уверены что можете с этим справиться.</string>
   <string name="send_coins_activity_title">Отправка Digitalcoin</string>
   <string name="send_coins_fragment_request_payment_request_progress">Получение подписи %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Ошибка при получении подписи</string>
