--- a/wallet/res/values-sv/strings.xml
+++ b/wallet/res/values-sv/strings.xml
@@ -37,9 +37,9 @@
   <string name="wallet_options_encrypt_keys_change">Ändra PIN-kod</string>
   <string name="wallet_options_safety">Säkerhetsinfo</string>
   <string name="wallet_options_donate">Dricksa / Donera</string>
-  <string name="wallet_donate_address_label">Donation till Digitalcoin Wallet</string>
+  <string name="wallet_donate_address_label">Donation till MaxCoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Lagringsutrymme snart slut</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin Wallet använder intern lagring för att komma ihåg transaktioner och block. Om lagringsutrymmet tar slut kommer den att sluta fungera och dina digitalcoin hamnar i riskzonen!\n\nVill du öppna Application Manager för att avinstallera onödiga appar?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet använder intern lagring för att komma ihåg transaktioner och block. Om lagringsutrymmet tar slut kommer den att sluta fungera och dina digitalcoin hamnar i riskzonen!\n\nVill du öppna Application Manager för att avinstallera onödiga appar?</string>
   <string name="wallet_low_storage_dialog_button_apps">Hantera appar</string>
   <string name="wallet_timeskew_dialog_title">Kontrollera dina tidsinställningar!</string>
   <string name="wallet_timeskew_dialog_msg">Din enhets tidsinställning avviker med %d minuter. Du kan förmodligen inte skicka och ta emot digitalcoin grund av detta problem.\n\nDu bör kontrollera och korrigera dina tids- och tidszoninställningar.</string>
@@ -49,7 +49,7 @@
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Ladda ner</string>
   <string name="wallet_old_sdk_dialog_title">Android-versionen är inaktuell</string>
-  <string name="wallet_old_sdk_dialog_message">Chansen är stor att någon av de kommande releaserna av Digitalcoin Wallet inte kommer att fungera på din enhet längre. I vissa fall kan det bli svårt att spendera dina tillgångar med den här enheten.\n\nSåvida du inte vet vad du gör, rekommenderas att du flyttar dina digitalcoin snart.</string>
+  <string name="wallet_old_sdk_dialog_message">Chansen är stor att någon av de kommande releaserna av MaxCoin Wallet inte kommer att fungera på din enhet längre. I vissa fall kan det bli svårt att spendera dina tillgångar med den här enheten.\n\nSåvida du inte vet vad du gör, rekommenderas att du flyttar dina digitalcoin snart.</string>
   <string name="send_coins_activity_title">Skicka digitalcoin</string>
   <string name="send_coins_fragment_request_payment_request_progress">Hämtar signatur från %s</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Hämtning av signatur misslyckades</string>
@@ -170,7 +170,7 @@
   <string name="export_keys_dialog_success"><![CDATA[<p>Din wallet har säkerhetskopierats till <tt>%s</tt></p><p>Om din enhet har uttagbart SD-kort, <i>bör</i> din säkerhetskopia vara på SD-kortet. Ta ut SD-koret och lägg det på en säker plats. Om SD-kortet <i>inte</i> uttagbart, måste du lagra din säkerhetskopia på någon annan plats än på din enhet.</p><p><b>Om enheten är den enda platsen säkerhetskopian finns på finns det en risk att du förlorar både enheten och säkerhetskopian samtidigt!</b></p><p>I alla fall, se till att du kommer ihåg ditt lösenord till din säkerhetskopia. Vill du arkivera din wallet nu?</p>]]></string>
   <string name="export_keys_dialog_failure">Din wallet kunde in säkerhetskopieras:\n%s</string>
   <string name="export_keys_dialog_button_archive">Arkiv</string>
-  <string name="export_keys_dialog_mail_subject">Digitalcoin Wallet-backup</string>
+  <string name="export_keys_dialog_mail_subject">MaxCoin Wallet-backup</string>
   <string name="export_keys_dialog_mail_text">Den bifogade krypterade filen innehåller privata digitalcoinnycklar och bör förvaras säkert i alla lägen. Glöm inte krypteringslösenordet!</string>
   <string name="export_keys_dialog_mail_intent_chooser">Arkivering av wallet med…</string>
   <string name="export_keys_dialog_mail_intent_failed">Arkivering av wallet misslyckades.</string>
